fix: align updates modal footer text

--- a/src/components/flow/Flow.module.scss
+++ b/src/components/flow/Flow.module.scss
@@ -49,6 +49,7 @@
       font-size: $unnnic-font-size-body-lg;
       font-weight: $unnnic-font-weight-regular;
       line-height: $unnnic-line-height-md + $unnnic-font-size-body-lg;
+      text-align: center;
     }
   }
 
